Fixed all contrast errors in the app

--- a/eaasi-front-end/src/scss/global.scss
+++ b/eaasi-front-end/src/scss/global.scss
@@ -104,7 +104,7 @@ ul {
 }
 
 a {
-	color: $green;
+	color: $dark-green;
 
 	&:visited,
 	&:active,
